--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -1,59 +1,59 @@
-body{
-    background-color: #302222;
-    margin: 0 auto;
+body {
+  background-color: #302222;
+  margin: 0 auto;
 }
-#navbar{
-    background-color: #533261;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#navbar {
+  background-color: #533261;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.left{
-    width: 300px;
-    float: left;
-    display: flex;
+.left {
+  width: 300px;
+  float: left;
+  display: flex;
 }
-.left img{
-    height: 60px;
-    margin: 10px;
+.left img {
+  height: 60px;
+  margin: 10px;
 }
-.left h2{
-    display: inline block;
-    color: white;
+.left h2 {
+  display: inline block;
+  color: white;
 }
-.right{
-    width: 300px;
-    float: right;
+.right {
+  width: 300px;
+  float: right;
 }
-.right a{
-    color: white;
-    text-decoration: none;
-    padding: 15px;
+.right a {
+  color: white;
+  text-decoration: none;
+  padding: 15px;
 }
-#main-container{
-    background-color: #D1D8E8;
-    height: 250px;
-    margin: 15px 0px;
-    padding: 10px;
+#main-container {
+  background-color: #d1d8e8;
+  height: 250px;
+  margin: 15px 0px;
+  padding: 10px;
 }
-#main-container h1{
-    text-decoration: underline;
+#main-container h1 {
+  text-decoration: underline;
 }
-#sub-container{
-    height: 300px;
-    width: calc(100vw);
-    overflow: hidden;
-    margin: 0 auto;
+#sub-container {
+  height: 300px;
+  width: calc(100vw);
+  overflow: hidden;
+  margin: 0 auto;
 }
-.boxes{
-    background-color: #D1D8E8;
-    height: 200px;
-    width: calc((100vw / 3) - 32px);
-    border: 1px solid black;
-    float: left;
-    padding: 10px;
+.boxes {
+  background-color: #d1d8e8;
+  height: 200px;
+  width: calc((100vw / 3) - 32px);
+  border: 1px solid black;
+  float: left;
+  padding: 10px;
 }
-.m-r{
-    margin-right: 15px;
+.m-r {
+  margin-right: 15px;
 }
