--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -1,60 +1,59 @@
-body{
-    background-color:#2F1C16 ;
-    margin: 0 auto;
+body {
+  background-color: #2f1c16;
+  margin: 0 auto;
 }
-#navbar{
-    background-color:#533261 ;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#navbar {
+  background-color: #533261;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-#logo-container{
-    width: 300px;
-    float: left;
-    display: flex;
-    justify-content:flex-start;
-    padding: 15px;
-
+#logo-container {
+  width: 300px;
+  float: left;
+  display: flex;
+  justify-content: flex-start;
+  padding: 15px;
 }
 #logo-container img {
-    height: 60px;
-    margin-right: 15px;
+  height: 60px;
+  margin-right: 15px;
 }
-#logo-container h2{
-    display: inline-block;
-    color: white;
+#logo-container h2 {
+  display: inline-block;
+  color: white;
 }
-#menu-container{
-    width: 250px;
-    float: right;
+#menu-container {
+  width: 250px;
+  float: right;
 }
-#menu-container a{
-    color: white;
-    text-decoration: none;
-    padding: 15px;
+#menu-container a {
+  color: white;
+  text-decoration: none;
+  padding: 15px;
 }
-#main-container{
-    background-color:#D2D9E9 ;
-    height: 300px;
-    margin: 15px;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
+#main-container {
+  background-color: #d2d9e9;
+  height: 300px;
+  margin: 15px;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
 }
-.box{
-    background-color: #82E17D;
-    width: 300px;
-    padding: 15px;
+.box {
+  background-color: #82e17d;
+  width: 300px;
+  padding: 15px;
 }
-#secondary-container{
-    background-color: #B84240 ;
-    height: 250px;
-    margin:0 15px 15px 15px ;
-    padding: 15px;
+#secondary-container {
+  background-color: #b84240;
+  height: 250px;
+  margin: 0 15px 15px 15px;
+  padding: 15px;
 }
-#inner-container{
-    background-color:#DADADA ;
-    border: 2px solid #369B25;
-    height: 100%;
+#inner-container {
+  background-color: #dadada;
+  border: 2px solid #369b25;
+  height: 100%;
 }
