--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   height: 250px;
   width: 500px;
   margin: 200px 500px;
-  background-color: red;
+  accent-color: ;
 }
 #top {
   height: 30%;
@@ -23,7 +23,7 @@ body {
 .box {
   height: 40px;
   width: 70px;
-  border: 1px solid white;
+  border: 3px solid green;
   padding: 10px;
   margin-right: 15px;
   border-radius: 50%;
@@ -33,4 +33,5 @@ body {
 }
 #bottom a {
   color: black;
+  text-decoration: none;
 }
