--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -64,11 +64,10 @@ body {
 }
 .blue-bg {
     background-color:#1ABCFD;
+} 
+#circle-container, #tile-container { 
+    display: flex;
 }
-#tile-container,
-#circle-container {
-                 display: flex;
-     }
 #tile-container {
     margin-bottom: 15px;
 }
