--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -2,31 +2,30 @@ body {
     background-color: #ECECEC;
     margin: 0 auto;
 }
-#navbar{
-    background-color:#625C5C;
+#navbar {
+    background-color: #625C5C;
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom:1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
-#logo-container{
+#logo-container {
     width: 200px;
     float: left;
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     padding: 15px;
-
 }
 #logo-container img {
     height: 60px;
     margin-right: 15px;
 }
-#logo-container h2{
+#logo-container h2 {
     display: inline-block;
     color: white;
 }
-#profile-container{
+#profile-container {
     width: auto;
     float: right;
 }
@@ -34,36 +33,36 @@ body {
     height: 60px;
     border-radius: 50%;
 }
-.main{
+.main {
     height: calc(100vh - 81px);
 }
-#sidebar{
-    background-color:#625C5C;
+#sidebar {
+    background-color: #625C5C;
     height: 100%;
     width: 150px;
     float: left;
 }
 #container > h2 {
-    color:#303030 ;
+    color: #303030;
     margin: 0 0 15px 0;
     text-decoration: underline;
 }
-#container{
+#container {
     padding: 15px;
     float: left;
     width: calc(100vw - 200px);
 }
 .green-bg {
-    background-color:#0ACE82 ;
+    background-color: #0ACE82;
 }
 .purple-bg {
-    background-color:#A259FF ;
+    background-color: #a259ff;
 }
 .red-bg {
-    background-color:#F34E1E;
+    background-color: #f34e1e;
 }
 .blue-bg {
-    background-color:#1ABCFD;
+    background-color: #1abcfd;
 } 
 #circle-container, #tile-container { 
     display: flex;
@@ -71,7 +70,7 @@ body {
 #tile-container {
     margin-bottom: 15px;
 }
-.tile{
+.tile {
     height: 200px;
 }
 .tile, .circle, .chart {
@@ -81,25 +80,23 @@ body {
     justify-content: center;
     align-items: center;
 }
-.tile h2,
-.tile h3{
+.tile h2, .tile h3 {
     color: white;
-}
-.circle, .chart{
+} 
+.circle, .chart {
     height: calc((100vw - 200px) / 4);
 }
-.circle{
+.circle {
     border-radius: 50%;
 }
-#tile-container > div,
-#circle-container > div{
+#tile-container > div, #circle-container > div {
     margin-right: 20px;
 }
 #tile-container > div:last-child,
 #circle-container > div:last-child {
     margin-right: 0;
 }
-.inner-one{
+.inner-one {
     width: 70%;
     height: 70%;
     border-radius: 50%;
@@ -111,7 +108,7 @@ body {
 .inner-four h2 {
     color: white;
 }
-.inner-two{
+.inner-two {
     width: 90%;
     height: 90%;
     border-radius: 50%;
@@ -123,16 +120,16 @@ body {
 .inner-one h2 {
     color:black;
 }
-.inner-three{
+.inner-three {
     width: 90%;
     height: 90%;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#FF7261 ;
+    background-color: #FF7261;
 }
-.inner-four{
+.inner-four {
     width: 70%;
     height: 70%;
     border-radius: 50%;
@@ -172,15 +169,15 @@ body {
     height: calc(100% - 40px);
     background-color: #5E5C5D;
 }
-.six{
+.six {
     left: 225px;
     height: calc(100% - 280px);
     background-color: #FF7261;
 }
-.line{
+.line {
     width: 100%;
     height: 15px;
-    background-color:#5E5C5D ;
+    background-color: #5E5C5D;
     position: absolute;
 }
 #sidebar nav {
@@ -189,15 +186,15 @@ body {
     align-items: flex-start;
     padding: 15px 30px 30px 30px;
 }
-#sidebar nav a{
+#sidebar nav a {
     color: white;
     padding: 5px;
 }
-#sidebar nav a:first-child{
+#sidebar nav a:first-child {
     padding top: 0;
 }
-#sidebar nav a.active{
-    color:#0ACE82;
+#sidebar nav a.active {
+    color: #0ACE82
     text-decoration: none;
 }
 
