--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -57,3 +57,12 @@ body {
   border: 2px solid #369b25;
   height: 100%;
 }
+@media only screen and (max-width: 650px) {
+  #menu-container a {
+    display: none;
+  }
+  .box one,
+  .box two {
+    width: 100%;
+  }
+}
