--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 #main-container {
   background-color: #d2d9e9;
-  height: 300px;
+  height: 250px;
   margin: 15px;
   padding: 15px;
   display: flex;
@@ -57,12 +57,18 @@ body {
   border: 2px solid #369b25;
   height: 100%;
 }
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 730px) {
   #menu-container a {
     display: none;
   }
-  .box one,
-  .box two {
-    width: 100%;
+  #main-container {
+    width: calc((100%) - 60px);
+    flex-direction: column;
+    height: auto;
+  }
+  .one,
+  .two {
+    width: calc((100%) - 60px);
+    margin-bottom: 15px;
   }
 }
