--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 #secondary-container {
   background-color: #b84240;
-  height: 250px;
+  height: 200px;
   margin: 0 15px 15px 15px;
   padding: 15px;
 }
@@ -70,5 +70,6 @@ body {
   .two {
     width: calc((100%) - 60px);
     margin-bottom: 15px;
+    margin-left: 15px;
   }
 }
