--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -72,3 +72,13 @@ body {
     height: auto;
   }
 }
+@media only screen and (max-width: 900px) and (min-width: 651px) {
+  .first {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .second,
+  .third {
+    width: calc((100vw - 60px) / 2);
+  }
+}
