--- a/task-5/css/form.css
+++ b/task-5/css/form.css
@@ -90,12 +90,12 @@ li {
 .radio {
   margin-top: 15px;
 }
-.namefield,
-.branchfield,
-.mobilefield,
-.lastnamefield,
-.emailfield,
-.radiofield {
+.namearea,
+.brancharea,
+.mobilearea,
+.lastnamearea,
+.emailarea,
+.radioarea {
   margin-top: 10px;
 }
 input[type="text"],
@@ -103,10 +103,17 @@ input[type="tel"],
 input[type="email"] {
   width: 27vw;
   height: 30px;
+  border-radius: 0;
+  border: 2px solid #555;
+  border-radius: 0;
+  color: #555;
 }
 select {
   width: 27.6vw;
   height: 35px;
+  border: 2px solid #555;
+  border-radius: 0;
+  color: #555;
 }
 .sub-container {
   float: left;
@@ -147,6 +154,11 @@ select {
 .address {
   margin-bottom: 5px;
 }
+textarea {
+  border: 2px solid #555;
+  border-radius: 0;
+  color: #555;
+}
 .button {
   margin-top: 1%;
   margin-left: 70%;
@@ -174,4 +186,72 @@ input[type="tel"]:focus,
 input[type="email"]:focus {
   border: 3px solid black;
   background-color: lightskyblue;
+}
+@media only screen and (max-width: 800px) {
+  .sidebar {
+    display: none;
+    width: 0px;
+  }
+  .button {
+    display: flex;
+    float: left;
+    margin-left: 3%;
+  }
+  .clear,
+  .submit {
+    width: auto;
+  }
+  .address {
+    display: flex;
+    float: left;
+    margin-left: 2%;
+  }
+  .checkbox {
+    display: flex;
+    margin-left: 1.5%;
+    flex-direction: column;
+    float: left;
+  }
+  .check-1 {
+    margin-left: 3.2%;
+  }
+  .radioarea {
+    flex-direction: column;
+  }
+  .main {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+  }
+  .right-container {
+    width: auto;
+    height: auto;
+  }
+  .second-formside {
+    margin-left: 0;
+    flex-direction: column;
+    display: flex;
+  }
+  .main-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .sub-address {
+    align-self: auto;
+    flex-direction: column;
+    float: left;
+  }
+  .addressarea {
+    margin-left: 2%;
+  }
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"] {
+    width: 80vw;
+    height: 30px;
+  }
+  select {
+    width: 80vw;
+    height: 35px;
+  }
 }
