--- a/task-5/css/form.css
+++ b/task-5/css/form.css
@@ -1,4 +1,4 @@
-body {
+body {  1
   margin: 0 auto;
 }
 nav {
@@ -45,6 +45,7 @@ nav {
   padding: 10px;
   width: calc(10%);
   height: 100vh;
+  padding-left: 0px;
 }
 ul {
   padding: 0;
@@ -101,7 +102,7 @@ li {
 input[type="text"],
 input[type="tel"],
 input[type="email"] {
-  width: 27vw;
+  width: 30vw;
   height: 30px;
   border-radius: 0;
   border: 2px solid #555;
@@ -109,7 +110,7 @@ input[type="email"] {
   color: #555;
 }
 select {
-  width: 27.6vw;
+  width: 30.6vw;
   height: 35px;
   border: 2px solid #555;
   border-radius: 0;
@@ -187,15 +188,17 @@ input[type="email"]:focus {
   border: 3px solid black;
   background-color: lightskyblue;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 991px) {
   .sidebar {
-    display: none;
-    width: 0px;
+    padding-left: 0px;
+    width: 15%;
+    padding-right: 10px;
+    height: 120vh;
   }
   .button {
     display: flex;
     float: left;
-    margin-left: 3%;
+    margin-left: 15%;
   }
   .clear,
   .submit {
@@ -208,15 +211,16 @@ input[type="email"]:focus {
   }
   .checkbox {
     display: flex;
-    margin-left: 1.5%;
+    margin-left: 2%;
     flex-direction: column;
     float: left;
   }
   .check-1 {
-    margin-left: 3.2%;
+    margin-left: 3%;
   }
   .radioarea {
     flex-direction: column;
+    margin-left: 4%;
   }
   .main {
     width: 100vw;
@@ -242,16 +246,43 @@ input[type="email"]:focus {
     float: left;
   }
   .addressarea {
-    margin-left: 2%;
+    margin-left: 4%;
+  }
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"] {
+    width: 70vw;
+    height: 30px;
+    margin-left: 4%;
+  }
+  select {
+    width: 71vw;
+    height: 35px;
+    margin-left: 4.4%;
+  }
+  label {
+    margin-left: 4%;
+  }
+  .registration {
+    margin-left: 3%;
+  }
+  .sub-container {
+    margin-left: 3%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .sidebar {
+    display: none;
   }
   input[type="text"],
   input[type="tel"],
   input[type="email"] {
     width: 80vw;
-    height: 30px;
-  }
-  select {
-    width: 80vw;
-    height: 35px;
-  }
+}
+select {
+  width: 81vw;
+}
+.check-1 {
+  margin-left: 3.3%;
+}
 }
