--- a/task-5/css/form.css
+++ b/task-5/css/form.css
@@ -1,12 +1,13 @@
 body {  1
   margin: 0 auto;
 }
-nav {
+.navbar {
   height: 80px;
   display: flex;
   justify-content: space-between;
   padding: o 20px;
   border-bottom: 2px solid black;
+  width: 100%;
 }
 .left-navbar {
   height: 60px;
@@ -15,10 +16,11 @@ nav {
   align-self: center;
 }
 .left-navbar img {
-  height: 50px;
-  width: 30px;
+  height: 70px;
+  width: 50px;
   align-self: center;
-  margin-left: 20px;
+  margin-left: 5px;
+  margin-right: 10px;
 }
 .left-navbar h2 {
   padding: 0 8px;
@@ -47,12 +49,14 @@ nav {
   height: 100vh;
   padding-left: 0px;
 }
-ul {
-  padding: 0;
+.sidebar > nav {
+  display: flex;
+  flex-direction: column;
 }
-li {
-  padding-left: 30px;
-  cursor: pointer;
+nav a {
+  padding-bottom: 15px;
+  color: #555;
+  text-decoration: none;
 }
 .registration {
   margin-left: 10px;
@@ -188,6 +192,14 @@ input[type="tel"]:focus,
 input[type="email"]:focus {
   border: 3px solid black;
   background-color: lightskyblue;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+nav img {
+  height: 25px;
+  margin-right: 15px;
 }
 @media only screen and (max-width: 991px) {
   .sidebar {
