--- a/task-7/css/style.css
+++ b/task-7/css/style.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .calculator {
   width: 400px;
   height: 480px;
@@ -14,9 +15,11 @@ body {
   background-color: #312e2e;
   overflow: hidden;
 }
-.caiculator h2 {
+
+.calculator h2 {
   color: white;
 }
+
 .display-container {
   width: 100%;
   height: 120px;
@@ -25,6 +28,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .display {
   width: 90%;
   height: 80px;
@@ -46,6 +50,7 @@ body {
   padding: 20px;
   background-color: #312e2e;
 }
+
 button {
   width: 60px;
   height: 50px;
@@ -58,10 +63,38 @@ button {
   border: 1px solid black;
   padding: 15px 10px;
 }
+
 .m-b {
   margin-bottom: 10px !important;
 }
+
 .btn-green {
   background-color: rgb(11, 159, 11) !important;
   color: white !important;
+}
+
+@media (max-width: 768px) {
+  .calculator {
+    width: 80%;
+    height: 600px;
+  }
+
+  button {
+    width: 18%;
+    height: 60px;
+    font-size: 20px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .calculator {
+    width: 90%;
+    height: 700px;
+  }
+
+  button {
+    width: 25%;
+    height: 70px;
+    font-size: 20px !important;
+  }
 }
